--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "testw": "node_modules/.bin/mocha -c -w --reporter spec ./test/**/*.js",
-    "test": "node_modules/.bin/mocha -c --reporter spec ./test/**/*.js"
+    "test": "mocha -c -w --reporter spec ./test/**/*.test.js",
+    "testo": "mocha -c --reporter spec ./test/**/*.test.js",
+    "spec": "mocha -c -w --reporter spec ./spec/**/*.spec.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/anara123/school-management-kata#readme",
   "devDependencies": {
     "chai": "^3.4.1",
+    "chai-shallow-deep-equal": "^1.3.0",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2"
   }
