--- a/package.json
+++ b/package.json
@@ -24,5 +24,9 @@
     "chai-shallow-deep-equal": "^1.3.0",
     "mocha": "^2.3.4",
     "sinon": "^1.17.2"
+  },
+  "dependencies": {
+    "async": "^1.5.0",
+    "jsonwebtoken": "^5.4.1"
   }
 }
