--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha -c -w --reporter spec ./test/**/*.test.js",
+    "test": "mocha -c -w --reporter spec ./test/**/*.test.js ./test/test-helper.js",
     "testo": "mocha -c --reporter spec ./test/**/*.test.js",
-    "spec": "mocha -c -w --reporter spec ./spec/**/*.spec.js"
+    "spec": "mocha -c -w --reporter spec ./spec/**/*.spec.js ./test/test-helper.js",
+    "query": "mocha -c -w --reporter spec ./spec/queries/**/*.test.js --timeout 5000"
   },
   "repository": {
     "type": "git",
@@ -23,12 +24,15 @@
     "chai": "^3.4.1",
     "chai-shallow-deep-equal": "^1.3.0",
     "mocha": "^2.3.4",
+    "mocha-mongoose": "^1.1.1",
     "sinon": "^1.17.2"
   },
   "dependencies": {
     "async": "^1.5.0",
     "jsonwebtoken": "^5.4.1",
     "lodash": "^3.10.1",
+    "mongodb": "^2.1.2",
+    "mongoose": "^4.3.4",
     "sha256": "^0.2.0",
     "uuid": "^2.0.1"
   }
